--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postcss-url": "^7.3.2",
     "vue": "^2.5.3",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
