--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss-import": "^11.1.0",
     "postcss-url": "^7.3.2",
     "vue": "^2.5.3",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
